# Prompt-Tester

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  INDEX.md  OVERVIEW.md  PROJECT_SUMMARY.md  PYTHON_BACKEND.md  QUICK_START.md  README.md  SETUP.md  SYSTEM_FLOW.md  TYPESCRIPT_MIGRATION.md  body.json  lovable_frontend_prompt.txt  output.json  package-lock.json  start-dev.bat
backend/: .env.example  package-lock.json  package.json  requirements.txt  run.py  server.js  test-mutations.js  test_bedrock.py  test_mutations.py
backend-python/: .env.example  README.md  pyproject.toml  test_bedrock.py
backend-python/app/services/: risk_evaluator.py
backend/app/: __init__.py  main.py  models.py
backend/app/routes/: stress_test.py
backend/app/services/: mutation_generator.py  risk_evaluator.py
backend/routes/: stressTest.js
backend/services/: mutationGenerator.js  riskEvaluator.js
backend/src/: server.ts  test-mutations.ts  types.ts
backend/src/routes/: stressTest.ts
backend/src/services/: mutationGenerator.ts  riskEvaluator.ts
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: CategorySection.tsx  Header.tsx  LoadingScanner.tsx  MutationCard.tsx  PromptInput.tsx  ScannerLoader.tsx  SparkleIcon.tsx  SummaryBar.tsx
frontend/src/hooks/: use-theme.tsx
frontend/src/lib/: api.ts  mock-data.ts  transform.ts
frontend/src/pages/: Home.tsx  Index.tsx
frontend/src/utils/: api.ts
